# obs-localvocal

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json  cbindgen.toml  patch_libobs.diff
.github/: FUNDING.yml
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/actions/run-clang-format/: action.yaml
.github/scripts/: .Aptfile  .build.zsh  .package.zsh  Build-Windows.ps1  Package-Windows.ps1
.github/workflows/: build-project.yaml  check-format.yaml  push.yaml
cmake/: BuildCTranslate2.cmake  BuildICU.cmake  BuildMyCurl.cmake  BuildSentencepiece.cmake  BuildWebVTT.cmake  BuildWhispercpp.cmake  FetchOnnxruntime.cmake  FetchWebsocketpp.cmake  FindLibAvObs.cmake  FindOpenSSL.cmake
cmake/common/: buildspec_common.cmake  compiler_common.cmake  helpers_common.cmake
cmake/linux/: compilerconfig.cmake  defaults.cmake
cmake/macos/: compilerconfig.cmake  helpers.cmake
data/locale/: ar-SA.ini  de-DE.ini  en-US.ini  es-ES.ini  fr-FR.ini  hi-IN.ini  ja-JP.ini  ko-KR.ini  pl-PL.ini  pt-BR.ini  pt_BR.ini  ru-RU.ini  ru_RU.ini  zh-CN.ini
data/models/: hugging_face_model_query.py  hugging_face_model_query_all.py  models_directory.json
src/: captions-thread.h  lib.rs  plugin-main.c  plugin-support.c.in  plugin-support.h  transcription-filter-callbacks.cpp  transcription-filter-callbacks.h  transcription-filter-data.h  transcription-filter-properties.cpp  transcription-filter-utils.cpp  transcription-filter-utils.h  transcription-filter.c  transcription-filter.cpp  transcription-filter.h  transcription-utils.cpp  transcription-utils.h  utils.cpp  utils.h  whisper-language.h  whisper-processing.cpp  whisper-processing.h
src/aws-transcribe/: aws-transcribe.cpp
src/cloud-transcription/: CloudTranscription.h
src/model-utils/: model-downloader-types.h  model-downloader-ui.cpp  model-downloader-ui.h  model-downloader.cpp  model-downloader.h  model-find-utils.cpp  model-find-utils.h  model-infos.cpp
src/stenographer/: stenographer-util.cpp  stenographer-util.h  stenographer.cpp  stenographer.h  stenographer_interface.html
src/tests/: CMakeLists.txt  KO_gyu_0227(굥이)20_Mar_3356_1_50.txt  README.md  alignment.txt  audio-file-utils.cpp  audio-file-utils.h  config.json  copy_dlls.ps1  diff_visualization.html  evaluate_output.py  evaluate_with_gpt.py  localvocal-offline-test.cpp  output.csv  output.txt  output_t00_nc.csv  output_t00_nc_bs.csv  output_t01_nc.csv  run_eval_loop.ps1  segmentation_visualization.html  segments.json  translation_pairs.txt  translations_scores.txt
src/tests/argparse/: argparse.hpp
src/timed-metadata/: timed-metadata-utils.cpp  timed-metadata-utils.h
src/translation/: language_codes.cpp  language_codes.h  translation-includes.h  translation-language-utils.cpp  translation-language-utils.h  translation-utils.cpp  translation-utils.h  translation.cpp  translation.h
src/translation/cloud-translation/: CMakeLists.txt  ITranslator.h  aws.cpp  aws.h  azure.cpp  azure.h  claude.cpp  claude.h  curl-helper.cpp  curl-helper.h  custom-api.cpp  custom-api.h  deepl.cpp  deepl.h  google-cloud.cpp  google-cloud.h  openai.cpp  openai.h  papago.cpp  papago.h  translation-cloud.cpp  translation-cloud.h
src/ui/: filter-replace-dialog.cpp  filter-replace-dialog.h  filter-replace-dialog.ui  filter-replace-utils.cpp  filter-replace-utils.h
src/whisper-utils/: resample-utils.cpp  resample-utils.h  silero-vad-onnx.cpp  silero-vad-onnx.h  token-buffer-thread.cpp  token-buffer-thread.h  token-buffer.cpp  token-buffer.h  vad-processing.cpp  vad-processing.h  whisper-language.h  whisper-model-utils.cpp  whisper-model-utils.h  whisper-params.cpp  whisper-params.h  whisper-processing.cpp  whisper-processing.h  whisper-utils.cpp  whisper-utils.h
video-bytestream-tools/src/: h264.rs
video-bytestream-tools/src/h264/: avcc.rs
webvtt-in-video-stream/: Cargo.toml
webvtt-in-video-stream/src/: lib.rs
